	* Temporarily removed Jabber user registration, which wasn't
	  working anyway.
	* Added a spiffy Help button
	* Wrote a plugin for all those people who miss having the
	  chat rooms in their buddy lists (chatlist.so)
	* Updated libfaim
	* Added drop down selection to chat invitation
	* Improved the look of the chat invitation dialog
	* Improved the look of the proxy preferences

version 0.43 (09/06/2001):
	* Updated German Translation (thanks Daniel Seifert)
	* Can change friendly name in MSN again
	* Bug fixes
	* Auto-reconnect plugin has exponential timeout (i.e. it
	  tries after 8 seconds, then 16, then 32, etc. up to 17
	  minutes)
	* Removed file transfer things from Napster. It didn't work
	  well anyway. It'll be back eventually. (Does anyone even
	  use napster anymore?)

version 0.11.0-pre15 (08/28/2001):
	* MSN works again
	* Fixed a little segfault when images are links
	* Redid the about box again.
	* Fixed a nice little bug with the manual browser command
	* Oscar Unicode fix (Thanks John Matthews)
	* Added Russian Translation
	* Can select which protocols are compiled statically
	  (e.g.: ./configure --with-static-prpls=oscar,jabber)
	* New plugin events: event_im_displayed_sent and
	  event_im_displayed_rcvd. Use these to change messages after
	  they're displayed (e.g. encrypt sent messages, or send
	  auto-responses and have them display locally properly)
	* Updated French Translation (thanks sebfrance)
	* Can use Arts for sound (thanks Tom Dyas)

version 0.11.0-pre14 (06/17/2001):
	* Fixed a segfault with Oscar's account confirmation
	  (Thanks, Adam)
	* Updated the German translation (Thanks, Dominik)
	* Some MSN changes
	* Some HTML widget changes
	* Can specify hosts/ports for Yahoo (thanks Jeremy Brooks)
	* Many many bugfixes

version 0.11.0-pre13 (06/06/2001):
	* Can view/set chat topic in Jabber (thanks faceprint)
	* The napster plugin no longer segfaults on invalid names
	  and/or passwords.